RESOLVED FIXED293407
css/css-view-transitions/scroller.html fails due to scrollbars not being captured in the screenshot
https://bugs.webkit.org/show_bug.cgi?id=293407
Summary css/css-view-transitions/scroller.html fails due to scrollbars not being capt...
Matt Woodrow
Reported 2025-05-21 18:40:54 PDT
Snapshot painting isn't drawing the scrollbars
Attachments
Radar WebKit Bug Importer
Comment 1 2025-05-21 18:44:55 PDT
Matt Woodrow
Comment 2 2025-05-21 18:59:01 PDT
EWS
Comment 3 2025-05-23 19:09:14 PDT
Committed 295382@main (8f1676e2f164): <https://commits.webkit.org/295382@main> Reviewed commits have been landed. Closing PR #45749 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.