css/css-view-transitions/scroller.html fails due to scrollbars not being captured in the screenshot. https://bugs.webkit.org/show_bug.cgi?id=293407 <rdar://151822218>

Reviewed by Simon Fraser.

Pass the PaintBehavior flags into scrollbar painting, and paint the composited
parts if FlattenCompositingLayers is specified.

* LayoutTests/TestExpectations:
* Source/WebCore/rendering/RenderBlock.cpp:
(WebCore::RenderBlock::paint):
* Source/WebCore/rendering/RenderLayer.cpp:
(WebCore::RenderLayer::paintOverflowControlsForFragments):
* Source/WebCore/rendering/RenderLayerScrollableArea.cpp:
(WebCore::RenderLayerScrollableArea::paintOverflowControls):
* Source/WebCore/rendering/RenderLayerScrollableArea.h:
* Source/WebCore/rendering/svg/RenderSVGRoot.cpp:
(WebCore::RenderSVGRoot::paint):

Canonical link: https://commits.webkit.org/295382@main